--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,20 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+index:
+    path: /
+    controller: App\Controller\IndexController::index
+
+moveSite:
+    path: /film/{id}
+    controller: App\Controller\filmController::showFilms
+
+login:
+    path: /login
+    controller: App\Controller\IndexController::login
+
+category:
+    path: /category/{id}
+    controller: App\Controller\CategoryController::showFilms
+
+users:
+    path: /user/{id}
+    controller: App\Controller\UserController::showUserDetails
+
