--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -35,6 +35,16 @@ newUsers:
     path: /new/user
     controller: App\Controller\UserController::addUser
     
+showUsers:
+    path: /users
+    controller: App\Controller\UserController::showUsers
+
+comment:
+    path: /new/comment
+    controller: App\Controller\CommentController::newComment
+
+logout:
+    path: /logout
 
     
     
