--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ yarn-error.log
 ###< symfony/web-server-bundle ###
 .idea
 /.idea
+
+###> phpunit/phpunit ###
+/phpunit.xml
+###< phpunit/phpunit ###
