--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "twbs/bootstrap": "4.1.0"
     },
     "require-dev": {
+        "phpunit/phpunit": "^7.1",
         "symfony/browser-kit": "^4.0",
         "symfony/css-selector": "^4.0",
         "symfony/debug-pack": "*",
